--- a/index.html
+++ b/index.html
@@ -3,35 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Relojes Casio - Tu Mejor Estilo</title>
+    <title>Relojes Eón Time - Tu Mejor Estilo</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
 </head>
 <body>
     <!-- Hero Section -->
-    <div class="hero">
-        <div class="hero-content">
-            <h1 data-aos="fade-down">CASIO</h1>
-            <p class="tagline" data-aos="fade-up">El reloj que resalta tu estilo</p>
-            <div class="hero-images" data-aos="fade-up">
-                <div class="image-container">
-                    <img src="/api/placeholder/300/300" alt="Reloj 1" class="floating">
-                </div>
-                <div class="image-container">
-                    <img src="/api/placeholder/300/300" alt="Reloj 2" class="floating-delayed">
-                </div>
-                <div class="image-container">
-                    <img src="/api/placeholder/300/300" alt="Reloj 3" class="floating">
-                </div>
-                <div class="image-container">
-                    <img src="/api/placeholder/300/300" alt="Reloj 4" class="floating-delayed">
-                </div>
+  
+<div class="hero">
+    <div class="hero-content">
+        <h1 data-aos="fade-down">CASIO</h1>
+        <p class="tagline" data-aos="fade-up">El reloj que resalta tu estilo</p>
+        <div class="hero-images" data-aos="fade-up">
+            <!-- Primera imagen -->
+            <div class="image-container">
+                <img src="casio1.PNG" alt="Reloj 1" class="floating">
             </div>
-            <a href="modelos.html" class="cta-button" data-aos="zoom-in">
-                VER MODELOS
-            </a>
+            <!-- Segundo video -->
+            <div class="image-container">
+                <video class="floating-delayed" controls>
+                    <source src="videocasio.mp3" type="video/mp4">
+                    Tu navegador no soporta la reproducción de videos.
+                </video>
+            </div>
+            <!-- Tercer video -->
+            <div class="image-container">
+                <video class="floating" controls>
+                    <source src="relojunisex.mp4" type="video/mp4">
+                    Tu navegador no soporta la reproducción de videos.
+                </video>
+            </div>
+            <!-- Cuarta imagen -->
+            <div class="image-container">
+                <img src="casiounisex.jpg" alt="Reloj 4" class="floating-delayed">
+            </div>
         </div>
+        <a href="modelos.html" class="cta-button" data-aos="zoom-in">
+            VER MODELOS
+        </a>
     </div>
+</div>
+
 
     <!-- Features Section -->
     <div class="features">
@@ -51,7 +63,7 @@
 
     <!-- Shipping Info -->
     <div class="shipping-info" data-aos="fade-up">
-        <h2>ENVÍOS A NIVEL NACIONAL</h2>
+        <h2>ENVÍOS A NIVEL NACIONAL 🇧🇴</h2>
         <p>Llevamos tu estilo a cualquier parte del país</p>
     </div>
 
