--- a/index.html
+++ b/index.html
@@ -9,41 +9,39 @@
 </head>
 <body>
     <!-- Hero Section -->
-  
-<div class="hero">
-    <div class="hero-content">
-        <h1 data-aos="fade-down">CASIO</h1>
-        <p class="tagline" data-aos="fade-up">El reloj que resalta tu estilo</p>
-        <div class="hero-images" data-aos="fade-up">
-            <!-- Primera imagen -->
-            <div class="image-container">
-                <img src="casio1.PNG" alt="Reloj 1" class="floating">
+    <div class="hero">
+        <div class="hero-content">
+            <h1 data-aos="fade-down">CASIO</h1>
+            <p class="tagline" data-aos="fade-up">El reloj que resalta tu estilo</p>
+            <div class="hero-images" data-aos="fade-up">
+                <!-- Primera imagen -->
+                <div class="image-container">
+                    <img src="casio1.PNG" alt="Reloj 1" class="floating">
+                </div>
+                <!-- Segundo video -->
+                <div class="image-container">
+                    <video class="floating-delayed" autoplay muted loop playsinline>
+                        <source src="videocasio.mp4" type="video/mp4">
+                        Tu navegador no soporta la reproducción de videos.
+                    </video>
+                </div>
+                <!-- Tercer video -->
+                <div class="image-container">
+                    <video class="floating" autoplay muted loop playsinline>
+                        <source src="relojunisex.mp4" type="video/mp4">
+                        Tu navegador no soporta la reproducción de videos.
+                    </video>
+                </div>
+                <!-- Cuarta imagen -->
+                <div class="image-container">
+                    <img src="casiounisex.jpg" alt="Reloj 4" class="floating-delayed">
+                </div>
             </div>
-            <!-- Segundo video -->
-            <div class="image-container">
-                <video class="floating-delayed" controls>
-                    <source src="videocasio.mp4" type="video/mp4">
-                    Tu navegador no soporta la reproducción de videos.
-                </video>
-            </div>
-            <!-- Tercer video -->
-            <div class="image-container">
-                <video class="floating" controls>
-                    <source src="relojunisex.mp4" type="video/mp4">
-                    Tu navegador no soporta la reproducción de videos.
-                </video>
-            </div>
-            <!-- Cuarta imagen -->
-            <div class="image-container">
-                <img src="casiounisex.jpg" alt="Reloj 4" class="floating-delayed">
-            </div>
+            <a href="modelos.html" class="cta-button" data-aos="zoom-in">
+                VER MODELOS
+            </a>
         </div>
-        <a href="modelos.html" class="cta-button" data-aos="zoom-in">
-            VER MODELOS
-        </a>
     </div>
-</div>
-
 
     <!-- Features Section -->
     <div class="features">
