--- a/modelos.html
+++ b/modelos.html
@@ -30,11 +30,14 @@
         <div class="modal-content">
             <span class="close-button">&times;</span>
             <div class="modal-images">
-                <!-- Las imágenes del producto se insertarán aquí dinámicamente -->
+                <button id="prevImage" class="carousel-button">&#10094;</button>
+                <img id="modalImage" src="" alt="Producto" class="modal-image">
+                <button id="nextImage" class="carousel-button">&#10095;</button>
             </div>
             <div class="modal-info">
                 <h2></h2>
                 <p class="price"></p>
+                <p class="details"></p>
                 <a href="#" class="whatsapp-button" target="_blank">
                     QUIERO COMPRARLO
                 </a>
