--- a/modelos.html
+++ b/modelos.html
@@ -15,10 +15,14 @@
     </header>
 
     <!-- Model Selection -->
-    <div class="model-selector">
-        <button class="model-button active" data-model="CASIO">CASIO CLASSIC</button>
-        <button class="model-button" data-model="UNISEX">CASIO UNISEX</button>
-    </div>
+<div class="model-selector">
+    <button class="model-button active" data-model="CASIO">CASIO CLASSIC</button>
+    <button class="model-button" data-model="UNISEX">CASIO UNISEX</button>
+    <button class="model-button" data-model="CASIO REDONDO">CASIO REDONDO</button>
+    <button class="model-button" data-model="CASIO NUEVO">CASIO NUEVO</button>
+    <button class="model-button" data-model="RELOJ OFERTA">RELOJ OFERTA</button>
+</div>
+
 
     <!-- Products Grid -->
     <div class="products-grid" id="productsGrid">
