--- a/modelos.html
+++ b/modelos.html
@@ -20,7 +20,8 @@
     <button class="model-button" data-model="UNISEX">CASIO UNISEX</button>
     <button class="model-button" data-model="CASIO REDONDO">CASIO REDONDO</button>
     <button class="model-button" data-model="CASIO NUEVO">CASIO NUEVO</button>
-    <button class="model-button" data-model="RELOJ OFERTA">RELOJ OFERTA</button>
+    <button class="model-button" data-model="RELOJ_OFERTA_WOMEN">RELOJ OFERTA</button>
+
 </div>
 
 
